--- a/design.ui
+++ b/design.ui
@@ -20,7 +20,7 @@
   <property name="styleSheet">
    <string notr="true">QMainWindow
 {
-	background-image:\img\lib.jpg;
+	background-image:url(img/lib.jpg);
 }
 </string>
   </property>
