--- a/21.ui
+++ b/21.ui
@@ -33,7 +33,24 @@
    <string notr="true">QMainWindow
 {
 	background: url(&quot;img/background.jpg&quot;);
-}</string>
+}
+
+QPushButton
+{
+	text-align:right;
+	padding-right:10px;
+}
+
+QPushButton:selected
+{
+	outline: none;
+}
+
+QPushButton:active
+{
+	outline: none;
+}
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="dealer">
@@ -201,8 +218,8 @@
    <widget class="QLabel" name="u_card1">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>20</y>
+      <x>50</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -214,8 +231,8 @@
    <widget class="QLabel" name="u_card2">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>20</y>
+      <x>80</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -227,8 +244,8 @@
    <widget class="QLabel" name="u_card3">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>20</y>
+      <x>110</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -240,8 +257,8 @@
    <widget class="QLabel" name="u_card4">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>20</y>
+      <x>140</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -253,8 +270,8 @@
    <widget class="QLabel" name="u_card5">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>20</y>
+      <x>170</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -266,8 +283,8 @@
    <widget class="QLabel" name="u_card6">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>20</y>
+      <x>200</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -279,8 +296,8 @@
    <widget class="QLabel" name="u_card7">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>20</y>
+      <x>230</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -292,8 +309,8 @@
    <widget class="QLabel" name="u_card8">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>20</y>
+      <x>260</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -305,8 +322,8 @@
    <widget class="QLabel" name="u_card9">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>20</y>
+      <x>290</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -318,8 +335,8 @@
    <widget class="QLabel" name="u_card10">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>20</y>
+      <x>320</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -331,8 +348,8 @@
    <widget class="QLabel" name="u_card11">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>20</y>
+      <x>350</x>
+      <y>40</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -349,6 +366,9 @@
       <width>141</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton
@@ -375,6 +395,9 @@ QPushButton:hover
       <width>141</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton
@@ -416,6 +439,9 @@ QPushButton:hover
       <bold>true</bold>
      </font>
     </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
     <property name="styleSheet">
      <string notr="true">QTextBrowser
 {
@@ -426,6 +452,73 @@ QPushButton:hover
     </property>
     <property name="placeholderText">
      <string>      Деньги:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Start">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>540</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	background: url(&quot;img/stop.png&quot;);
+	border: none;
+}
+
+QPushButton:hover
+{
+	border: none;
+	margin-left: 30px
+}</string>
+    </property>
+    <property name="text">
+     <string>Сдать карты</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="d_points">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>492</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: #ffffff;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="u_points">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>10</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: #ffffff;</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
