--- a/21.ui
+++ b/21.ui
@@ -637,6 +637,50 @@ QPushButton:hover
      </font>
     </property>
    </widget>
+   <widget class="QPushButton" name="Restart">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>410</y>
+      <width>181</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe Print</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	background-color: #000000 ;
+	border: none;
+	text-align: center;
+	color: #ffffff;
+}
+
+QPushButton:hover
+{
+	border: none;
+	color: #000000;
+	background-color: #ffffff;
+}</string>
+    </property>
+    <property name="text">
+     <string>Начать заново</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
