--- a/21.ui
+++ b/21.ui
@@ -218,8 +218,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card1">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>40</y>
+      <x>60</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -231,8 +231,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card2">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>40</y>
+      <x>90</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -244,8 +244,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card3">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>40</y>
+      <x>120</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -257,8 +257,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card4">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>40</y>
+      <x>150</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -270,8 +270,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card5">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>40</y>
+      <x>180</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -283,8 +283,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card6">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>40</y>
+      <x>210</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -296,8 +296,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card7">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>40</y>
+      <x>240</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -309,8 +309,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card8">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>40</y>
+      <x>270</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -322,8 +322,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card9">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>40</y>
+      <x>300</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -335,8 +335,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card10">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>40</y>
+      <x>330</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -348,8 +348,8 @@ QPushButton:active
    <widget class="QLabel" name="u_card11">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>40</y>
+      <x>360</x>
+      <y>50</y>
       <width>63</width>
       <height>85</height>
      </rect>
@@ -473,8 +473,8 @@ QPushButton:hover
    <widget class="QLabel" name="u_points">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>10</y>
+      <x>60</x>
+      <y>20</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -489,7 +489,7 @@ QPushButton:hover
    <widget class="QLabel" name="Victory">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>340</x>
       <y>180</y>
       <width>301</width>
       <height>211</height>
@@ -598,7 +598,7 @@ QPushButton:hover
      <rect>
       <x>760</x>
       <y>50</y>
-      <width>191</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -611,7 +611,7 @@ QPushButton:hover
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">QTextBrowser
+     <string notr="true">QLabel
 {
 	color:#ffffff;
 	border: none;
@@ -619,22 +619,6 @@ QPushButton:hover
     </property>
     <property name="text">
      <string>     Ставка:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="cashEdit">
-    <property name="geometry">
-     <rect>
-      <x>880</x>
-      <y>50</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe Print</family>
-      <pointsize>14</pointsize>
-     </font>
     </property>
    </widget>
    <widget class="QPushButton" name="Restart">
@@ -681,16 +665,272 @@ QPushButton:hover
      <bool>false</bool>
     </property>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>960</width>
-     <height>21</height>
-    </rect>
-   </property>
+   <widget class="QPushButton" name="close">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>0</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	text-align:left;
+	border: none;
+	background-color: none;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>img/close_button.png</normaloff>img/close_button.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="coin5">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>380</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	border: 1;
+	border-radius: 20;
+	text-align:center;
+	color: white;
+	font: 11pt &quot;Comic Sans MS&quot;;
+	background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(35, 40, 3, 255), stop:0.16 rgba(136, 106, 22, 255), stop:0.225 rgba(166, 140, 41, 255), stop:0.285 rgba(204, 181, 74, 255), stop:0.345 rgba(235, 219, 102, 255), stop:0.415 rgba(245, 236, 112, 255), stop:0.52 rgba(209, 190, 76, 255), stop:0.57 rgba(187, 156, 51, 255), stop:0.635 rgba(168, 142, 42, 255), stop:0.695 rgba(202, 174, 68, 255), stop:0.75 rgba(218, 202, 86, 255), stop:0.815 rgba(208, 187, 73, 255), stop:0.88 rgba(187, 156, 51, 255), stop:0.935 rgba(137, 108, 26, 255), stop:1 rgba(35, 40, 3, 255));
+	padding: 0;
+	margin: 0;
+}
+
+QPushButton:hover
+{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));
+}</string>
+    </property>
+    <property name="text">
+     <string>5</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="coin1">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>380</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	border: 1;
+	border-radius: 20;
+	text-align:center;
+	color: white;
+	font: 11pt &quot;Comic Sans MS&quot;;
+	background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(35, 40, 3, 255), stop:0.16 rgba(136, 106, 22, 255), stop:0.225 rgba(166, 140, 41, 255), stop:0.285 rgba(204, 181, 74, 255), stop:0.345 rgba(235, 219, 102, 255), stop:0.415 rgba(245, 236, 112, 255), stop:0.52 rgba(209, 190, 76, 255), stop:0.57 rgba(187, 156, 51, 255), stop:0.635 rgba(168, 142, 42, 255), stop:0.695 rgba(202, 174, 68, 255), stop:0.75 rgba(218, 202, 86, 255), stop:0.815 rgba(208, 187, 73, 255), stop:0.88 rgba(187, 156, 51, 255), stop:0.935 rgba(137, 108, 26, 255), stop:1 rgba(35, 40, 3, 255));
+	padding: 0;
+	margin: 0;
+}
+
+QPushButton:hover
+{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));
+}</string>
+    </property>
+    <property name="text">
+     <string>1</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="coin25">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>380</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	border: 1;
+	border-radius: 20;
+	text-align:center;
+	color: white;
+	font: 11pt &quot;Comic Sans MS&quot;;
+	background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(35, 40, 3, 255), stop:0.16 rgba(136, 106, 22, 255), stop:0.225 rgba(166, 140, 41, 255), stop:0.285 rgba(204, 181, 74, 255), stop:0.345 rgba(235, 219, 102, 255), stop:0.415 rgba(245, 236, 112, 255), stop:0.52 rgba(209, 190, 76, 255), stop:0.57 rgba(187, 156, 51, 255), stop:0.635 rgba(168, 142, 42, 255), stop:0.695 rgba(202, 174, 68, 255), stop:0.75 rgba(218, 202, 86, 255), stop:0.815 rgba(208, 187, 73, 255), stop:0.88 rgba(187, 156, 51, 255), stop:0.935 rgba(137, 108, 26, 255), stop:1 rgba(35, 40, 3, 255));
+	padding: 0;
+	margin: 0;
+}
+
+QPushButton:hover
+{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));
+}</string>
+    </property>
+    <property name="text">
+     <string>25</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="coin1000">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>380</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	border: 1;
+	border-radius: 20;
+	text-align:center;
+	color: white;
+	font: 11pt &quot;Comic Sans MS&quot;;
+	background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(35, 40, 3, 255), stop:0.16 rgba(136, 106, 22, 255), stop:0.225 rgba(166, 140, 41, 255), stop:0.285 rgba(204, 181, 74, 255), stop:0.345 rgba(235, 219, 102, 255), stop:0.415 rgba(245, 236, 112, 255), stop:0.52 rgba(209, 190, 76, 255), stop:0.57 rgba(187, 156, 51, 255), stop:0.635 rgba(168, 142, 42, 255), stop:0.695 rgba(202, 174, 68, 255), stop:0.75 rgba(218, 202, 86, 255), stop:0.815 rgba(208, 187, 73, 255), stop:0.88 rgba(187, 156, 51, 255), stop:0.935 rgba(137, 108, 26, 255), stop:1 rgba(35, 40, 3, 255));
+	padding: 0;
+	margin: 0;
+}
+
+QPushButton:hover
+{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));
+}</string>
+    </property>
+    <property name="text">
+     <string>1000</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="coin500">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>380</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	border: 1;
+	border-radius: 20;
+	text-align:center;
+	color: white;
+	font: 11pt &quot;Comic Sans MS&quot;;
+	background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(35, 40, 3, 255), stop:0.16 rgba(136, 106, 22, 255), stop:0.225 rgba(166, 140, 41, 255), stop:0.285 rgba(204, 181, 74, 255), stop:0.345 rgba(235, 219, 102, 255), stop:0.415 rgba(245, 236, 112, 255), stop:0.52 rgba(209, 190, 76, 255), stop:0.57 rgba(187, 156, 51, 255), stop:0.635 rgba(168, 142, 42, 255), stop:0.695 rgba(202, 174, 68, 255), stop:0.75 rgba(218, 202, 86, 255), stop:0.815 rgba(208, 187, 73, 255), stop:0.88 rgba(187, 156, 51, 255), stop:0.935 rgba(137, 108, 26, 255), stop:1 rgba(35, 40, 3, 255));
+	padding: 0;
+	margin: 0;
+}
+
+QPushButton:hover
+{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));
+}</string>
+    </property>
+    <property name="text">
+     <string>500</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="coin100">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>380</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+	border: 1;
+	border-radius: 20;
+	text-align:center;
+	color: white;
+	font: 11pt &quot;Comic Sans MS&quot;;
+	background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(35, 40, 3, 255), stop:0.16 rgba(136, 106, 22, 255), stop:0.225 rgba(166, 140, 41, 255), stop:0.285 rgba(204, 181, 74, 255), stop:0.345 rgba(235, 219, 102, 255), stop:0.415 rgba(245, 236, 112, 255), stop:0.52 rgba(209, 190, 76, 255), stop:0.57 rgba(187, 156, 51, 255), stop:0.635 rgba(168, 142, 42, 255), stop:0.695 rgba(202, 174, 68, 255), stop:0.75 rgba(218, 202, 86, 255), stop:0.815 rgba(208, 187, 73, 255), stop:0.88 rgba(187, 156, 51, 255), stop:0.935 rgba(137, 108, 26, 255), stop:1 rgba(35, 40, 3, 255));
+	padding: 0;
+	margin: 0;
+}
+
+QPushButton:hover
+{
+	background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 178, 102, 255), stop:0.55 rgba(235, 148, 61, 255), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(0, 0, 0, 0));
+}</string>
+    </property>
+    <property name="text">
+     <string>100</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="rate">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>50</y>
+      <width>47</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
