--- a/21.ui
+++ b/21.ui
@@ -457,8 +457,8 @@ QPushButton:hover
    <widget class="QLabel" name="d_points">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>492</y>
+      <x>160</x>
+      <y>490</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -499,39 +499,19 @@ QPushButton:hover
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="Tuz_answer">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>170</y>
-      <width>301</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel
-{
-	color: white;
-	background-color: #888888;
-}</string>
-    </property>
-    <property name="text">
-     <string> Вам выпал туз! Выберите сколько очков он будет стоить:</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="Tuz_1">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>220</y>
-      <width>151</width>
-      <height>51</height>
+      <x>830</x>
+      <y>480</y>
+      <width>61</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Sensei Medium</family>
-      <pointsize>28</pointsize>
+      <pointsize>16</pointsize>
      </font>
     </property>
     <property name="cursor">
@@ -541,16 +521,16 @@ QPushButton:hover
      <string notr="true">QPushButton
 {
 	color: #555555;
-	background-color: #cccccc;
+	background-color:#cccccc;
 	text-align: center;
-	border-bottom-left-radius: 70 40;
+	border-bottom-left-radius: 30 20;
 }
 QPushButton:hover
 {
 	
 	color: #000000;
 }
-#000000</string>
+</string>
     </property>
     <property name="text">
      <string>1</string>
@@ -559,16 +539,16 @@ QPushButton:hover
    <widget class="QPushButton" name="Tuz_2">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>220</y>
-      <width>151</width>
-      <height>51</height>
+      <x>890</x>
+      <y>480</y>
+      <width>61</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Sensei Medium</family>
-      <pointsize>28</pointsize>
+      <pointsize>16</pointsize>
      </font>
     </property>
     <property name="cursor">
@@ -580,7 +560,7 @@ QPushButton:hover
 	color: #cccccc;
 	background-color: #555555;
 	text-align: center;
-	border-bottom-right-radius: 70 40;
+	border-bottom-right-radius: 30 20;
 }
 QPushButton:hover
 {
@@ -596,7 +576,7 @@ QPushButton:hover
    <widget class="QLabel" name="cash">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>780</x>
       <y>50</y>
       <width>121</width>
       <height>31</height>
@@ -921,11 +901,24 @@ QPushButton:hover
    <widget class="QLabel" name="rate">
     <property name="geometry">
      <rect>
-      <x>890</x>
+      <x>900</x>
       <y>50</y>
       <width>47</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe Print</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel
+{
+	color:#ffffff;
+	border: none;
+}</string>
     </property>
     <property name="text">
      <string/>
