--- a/21.ui
+++ b/21.ui
@@ -33,6 +33,8 @@
    <string notr="true">QMainWindow
 {
 	background: url(&quot;img/background.jpg&quot;);
+	
+	background-color: rgb(255, 255, 255);
 }
 
 QPushButton
@@ -50,6 +52,9 @@ QPushButton:active
 	outline: none;
 }
 </string>
+  </property>
+  <property name="animated">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="dealer">
@@ -1004,24 +1009,18 @@ QPushButton:hover
    <widget class="QPushButton" name="Reset">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>40</y>
-      <width>61</width>
-      <height>61</height>
+      <x>740</x>
+      <y>50</y>
+      <width>75</width>
+      <height>71</height>
      </rect>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::RightToLeft</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton
 {
+	outline: none;
 	border: none;
-	background-image: url(&quot;img/reset_rate1.png&quot;);
-	padding: 0;
-	margin: 0;
-}
-</string>
+}</string>
     </property>
     <property name="text">
      <string/>
@@ -1035,9 +1034,6 @@ QPushButton:hover
       <width>64</width>
       <height>64</height>
      </size>
-    </property>
-    <property name="flat">
-     <bool>false</bool>
     </property>
    </widget>
   </widget>
